# domo_arigato

./: Cargo.toml  README.md
examples/: afk.rs  server_query.rs
src/: auth.rs  lib.rs  macros.rs  nbt.rs  util.rs
src/nbt/: mod.rs
src/proto/: handshake.rs  login.rs  mod.rs  play.rs  status.rs  types.rs
src/state/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
src/util/: io_error.rs  mod.rs
