[package]
name = "domo_arigato"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cesu8 = "1.1.0"
declio = { path = "../declio/declio" }

[dev-dependencies]
maplit = "1.0.2"
