[package]
name = "domo_arigato"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cesu8 = "1.1.0"
declio = { path = "../declio/declio" }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
maplit = "1.0.2"
