[package]
name = "domo_arigato"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.5"
anyhow = "1.0"
base64 = "0.13"
cesu8 = "1.1.0"
cfb8 = "0.5"
declio = { path = "../declio/declio" }
flate2 = "1.0"
rand = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rsa = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9"

[dev-dependencies]
maplit = "1.0.2"
